fixed alignment of upload property screen 3 for bigger screens

--- a/client/src/components/UploadProperty/UploadProperty3/UploadProperty3.css
+++ b/client/src/components/UploadProperty/UploadProperty3/UploadProperty3.css
@@ -32,7 +32,12 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  gap: 10px;
+  gap: 0;
+}
+
+.upload-property3-header .bathrooms-input,
+.upload-property3-header h1 {
+  margin: 20px;
 }
 
 .bath-error {
@@ -144,7 +149,7 @@
   cursor: pointer;
 }
 
-@media (max-width: 400px) {
+@media (max-width: 767px) {
   .bathrooms-input {
     display: flex;
     flex-direction: row;
